--- a/231115/public/css/index.css
+++ b/231115/public/css/index.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    cursor: url("../../../img/1.jpeg"), auto;
 }
 
 ul, li {
@@ -10,6 +11,7 @@ ul, li {
 a {
     text-decoration: none;
 }
+
 
 .commentWrapper {
     width: 500px;
